[gd_scene load_steps=14 format=3 uid="uid://bj2t1ebum4vru"]

[ext_resource type="Script" path="res://user_interface.gd" id="1_flv64"]
[ext_resource type="Texture2D" uid="uid://3lwcl3m8mwrr" path="res://assets/interface/rysunek-3.svg" id="2_gk5is"]
[ext_resource type="Texture2D" uid="uid://dmpoqxoqy7cxn" path="res://assets/interface/drewno2.png" id="2_vrxkb"]
[ext_resource type="Texture2D" uid="uid://db7k3jyn064gm" path="res://assets/interface/zebatka.png" id="3_4bgjp"]
[ext_resource type="Texture2D" uid="uid://drtbgeoaynxl6" path="res://assets/interface/red_black.jpg" id="3_qkukq"]
[ext_resource type="Texture2D" uid="uid://cs8tjvscswff5" path="res://assets/interface/pauza.svg" id="4_tequf"]
[ext_resource type="Texture2D" uid="uid://v3fcbxqt2vof" path="res://assets/interface/padloc_icon.jpg" id="4_uaw4j"]
[ext_resource type="Texture2D" uid="uid://4hwv7te3spfs" path="res://assets/interface/lewo.png" id="5_s1ai8"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_35kx7"]
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jt2my"]
bg_color = Color(0.387804, 0.217297, 0.11014, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25
shadow_color = Color(0.0253638, 0.0253638, 0.0253638, 0.6)
shadow_size = 3
shadow_offset = Vector2(2, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_foimy"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ckx7x"]
bg_color = Color(0.396889, 0.396889, 0.396889, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_size = 5
shadow_offset = Vector2(2, 2)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lukqr"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -384.0
offset_bottom = -216.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_flv64")

[node name="GameContainer" type="Node2D" parent="."]

[node name="menu_start" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="tlo" type="TextureRect" parent="menu_start"]
layout_mode = 0
offset_right = 768.0
offset_bottom = 432.0
texture = ExtResource("2_vrxkb")
expand_mode = 2

[node name="przycisk_start" type="Button" parent="menu_start"]
layout_mode = 0
offset_left = 256.0
offset_top = 304.0
offset_right = 512.0
offset_bottom = 386.0
focus_mode = 0
theme_override_font_sizes/font_size = 40
text = "START"

[node name="nazwa_gry" type="Label" parent="menu_start"]
layout_mode = 0
offset_left = 64.0
offset_top = 80.0
offset_right = 704.0
offset_bottom = 217.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 70
text = "Nazwa tej gry"
horizontal_alignment = 1
vertical_alignment = 1

[node name="menu_levels" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="tlo" type="TextureRect" parent="menu_levels"]
layout_mode = 0
offset_right = 768.0
offset_bottom = 432.0
texture = ExtResource("2_vrxkb")
expand_mode = 2

[node name="Button" type="Button" parent="menu_levels"]
material = SubResource("CanvasItemMaterial_35kx7")
use_parent_material = true
layout_mode = 0
offset_left = 176.0
offset_top = 248.0
offset_right = 256.0
offset_bottom = 328.0
focus_mode = 0
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxFlat_jt2my")
theme_override_styles/hover = SubResource("StyleBoxFlat_foimy")
theme_override_styles/normal = SubResource("StyleBoxFlat_jt2my")
text = "1"

[node name="Label" type="Label" parent="menu_levels"]
layout_mode = 0
offset_left = 80.0
offset_top = 16.0
offset_right = 322.0
offset_bottom = 71.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "Choose level"

[node name="PanelContainer1" type="PanelContainer" parent="menu_levels"]
layout_mode = 0
offset_left = 64.0
offset_top = 120.0
offset_right = 144.0
offset_bottom = 200.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ckx7x")

[node name="TextureButton" type="TextureButton" parent="menu_levels/PanelContainer1"]
visible = false
layout_mode = 2
texture_normal = ExtResource("3_qkukq")
texture_pressed = ExtResource("3_qkukq")
texture_hover = ExtResource("3_qkukq")
texture_disabled = ExtResource("3_qkukq")
texture_focused = ExtResource("3_qkukq")
ignore_texture_size = true
stretch_mode = 0

[node name="TextureRect" type="TextureRect" parent="menu_levels/PanelContainer1"]
layout_mode = 2
texture = ExtResource("4_uaw4j")
expand_mode = 1

[node name="Label" type="Label" parent="menu_levels/PanelContainer1"]
visible = false
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 5
theme_override_constants/shadow_outline_size = 5
theme_override_font_sizes/font_size = 40
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer2" type="PanelContainer" parent="menu_levels"]
offset_left = 200.0
offset_top = 120.0
offset_right = 280.0
offset_bottom = 200.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ckx7x")

[node name="TextureButton" type="TextureButton" parent="menu_levels/PanelContainer2"]
visible = false
layout_mode = 2
texture_normal = ExtResource("3_qkukq")
texture_pressed = ExtResource("3_qkukq")
texture_hover = ExtResource("3_qkukq")
texture_disabled = ExtResource("3_qkukq")
texture_focused = ExtResource("3_qkukq")
ignore_texture_size = true
stretch_mode = 0

[node name="TextureRect" type="TextureRect" parent="menu_levels/PanelContainer2"]
layout_mode = 2
texture = ExtResource("4_uaw4j")
expand_mode = 1

[node name="Label" type="Label" parent="menu_levels/PanelContainer2"]
visible = false
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 5
theme_override_constants/shadow_outline_size = 5
theme_override_font_sizes/font_size = 40
text = "2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer3" type="PanelContainer" parent="menu_levels"]
offset_left = 344.0
offset_top = 120.0
offset_right = 424.0
offset_bottom = 200.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ckx7x")

[node name="TextureButton" type="TextureButton" parent="menu_levels/PanelContainer3"]
visible = false
layout_mode = 2
texture_normal = ExtResource("3_qkukq")
texture_pressed = ExtResource("3_qkukq")
texture_hover = ExtResource("3_qkukq")
texture_disabled = ExtResource("3_qkukq")
texture_focused = ExtResource("3_qkukq")
ignore_texture_size = true
stretch_mode = 0

[node name="TextureRect" type="TextureRect" parent="menu_levels/PanelContainer3"]
layout_mode = 2
texture = ExtResource("4_uaw4j")
expand_mode = 1

[node name="Label" type="Label" parent="menu_levels/PanelContainer3"]
visible = false
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 5
theme_override_constants/shadow_outline_size = 5
theme_override_font_sizes/font_size = 40
text = "3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer4" type="PanelContainer" parent="menu_levels"]
offset_left = 488.0
offset_top = 120.0
offset_right = 568.0
offset_bottom = 200.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ckx7x")

[node name="TextureButton" type="TextureButton" parent="menu_levels/PanelContainer4"]
visible = false
layout_mode = 2
texture_normal = ExtResource("3_qkukq")
texture_pressed = ExtResource("3_qkukq")
texture_hover = ExtResource("3_qkukq")
texture_disabled = ExtResource("3_qkukq")
texture_focused = ExtResource("3_qkukq")
ignore_texture_size = true
stretch_mode = 0

[node name="TextureRect" type="TextureRect" parent="menu_levels/PanelContainer4"]
layout_mode = 2
texture = ExtResource("4_uaw4j")
expand_mode = 1

[node name="Label" type="Label" parent="menu_levels/PanelContainer4"]
visible = false
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 5
theme_override_constants/shadow_outline_size = 5
theme_override_font_sizes/font_size = 40
text = "4"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer5" type="PanelContainer" parent="menu_levels"]
offset_left = 632.0
offset_top = 120.0
offset_right = 712.0
offset_bottom = 200.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ckx7x")

[node name="TextureButton" type="TextureButton" parent="menu_levels/PanelContainer5"]
visible = false
layout_mode = 2
texture_normal = ExtResource("3_qkukq")
texture_pressed = ExtResource("3_qkukq")
texture_hover = ExtResource("3_qkukq")
texture_disabled = ExtResource("3_qkukq")
texture_focused = ExtResource("3_qkukq")
ignore_texture_size = true
stretch_mode = 0

[node name="TextureRect" type="TextureRect" parent="menu_levels/PanelContainer5"]
layout_mode = 2
texture = ExtResource("4_uaw4j")
expand_mode = 1

[node name="Label" type="Label" parent="menu_levels/PanelContainer5"]
visible = false
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 5
theme_override_constants/shadow_outline_size = 5
theme_override_font_sizes/font_size = 40
text = "5
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="back_start_button" type="TextureButton" parent="menu_levels"]
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 56.0
offset_bottom = 56.0
texture_normal = ExtResource("5_s1ai8")
texture_pressed = ExtResource("5_s1ai8")
texture_hover = ExtResource("5_s1ai8")
texture_disabled = ExtResource("5_s1ai8")
texture_focused = ExtResource("5_s1ai8")

[node name="Ustawienia" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="tlo_ustawien" type="TextureRect" parent="Ustawienia"]
layout_mode = 0
offset_top = -224.0
offset_right = 768.0
offset_bottom = 696.0
texture = ExtResource("2_gk5is")
expand_mode = 1

[node name="settings_button2" type="Button" parent="Ustawienia"]
layout_mode = 0
offset_left = 88.0
offset_top = 40.0
offset_right = 384.0
offset_bottom = 96.0
focus_mode = 0
mouse_force_pass_scroll_events = false
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxEmpty_lukqr")
text = "Settings"
flat = true

[node name="contols_button" type="Button" parent="Ustawienia"]
layout_mode = 0
offset_left = 384.0
offset_top = 38.0
offset_right = 680.0
offset_bottom = 95.0
focus_mode = 0
mouse_force_pass_scroll_events = false
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 35
text = "Controls"
flat = true

[node name="Line2D" type="Line2D" parent="Ustawienia"]
position = Vector2(384, 40)
points = PackedVector2Array(0, 0, 0, 55)
closed = true
width = 5.0
default_color = Color(0, 0, 0, 1)

[node name="Settings" type="Control" parent="Ustawienia"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="music_label" type="Label" parent="Ustawienia/Settings"]
layout_mode = 0
offset_left = 112.0
offset_top = 104.0
offset_right = 182.0
offset_bottom = 139.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "Music"
horizontal_alignment = 1
vertical_alignment = 1

[node name="sfx_label" type="Label" parent="Ustawienia/Settings"]
layout_mode = 0
offset_left = 96.0
offset_top = 160.0
offset_right = 292.0
offset_bottom = 202.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "Sound Effects"
horizontal_alignment = 1
vertical_alignment = 1

[node name="music_slider" type="HSlider" parent="Ustawienia/Settings"]
layout_mode = 0
offset_left = 300.0
offset_top = 112.0
offset_right = 650.0
offset_bottom = 128.0
focus_mode = 0
min_value = -40.0
max_value = 6.0

[node name="sfx_slider" type="HSlider" parent="Ustawienia/Settings"]
layout_mode = 0
offset_left = 300.0
offset_top = 168.0
offset_right = 650.0
offset_bottom = 184.0
focus_mode = 0
min_value = -40.0
max_value = 6.0

[node name="Controls" type="Control" parent="Ustawienia"]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="up_bind" type="Label" parent="Ustawienia/Controls"]
layout_mode = 0
offset_left = 104.0
offset_top = 96.0
offset_right = 145.0
offset_bottom = 138.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 3
theme_override_constants/shadow_outline_size = 10
theme_override_font_sizes/font_size = 30
text = "Up"
vertical_alignment = 1

[node name="Label_up_bind" type="Label" parent="Ustawienia/Controls/up_bind"]
layout_mode = 0
offset_left = 144.0
offset_top = 8.0
offset_right = 248.0
offset_bottom = 43.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "Move up"

[node name="up_bind_button" type="Button" parent="Ustawienia/Controls/up_bind"]
layout_mode = 0
offset_left = 456.0
offset_top = 8.0
offset_right = 560.0
offset_bottom = 39.0
focus_mode = 0
text = "Change"

[node name="down_bind" type="Label" parent="Ustawienia/Controls"]
layout_mode = 0
offset_left = 104.0
offset_top = 152.0
offset_right = 188.0
offset_bottom = 194.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 3
theme_override_constants/shadow_outline_size = 10
theme_override_font_sizes/font_size = 30
text = "Down"
vertical_alignment = 1

[node name="Label_down_bind" type="Label" parent="Ustawienia/Controls/down_bind"]
layout_mode = 0
offset_left = 144.0
offset_top = 8.0
offset_right = 284.0
offset_bottom = 43.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "Move down"

[node name="down_bind_button" type="Button" parent="Ustawienia/Controls/down_bind"]
layout_mode = 0
offset_left = 456.0
offset_top = 8.0
offset_right = 560.0
offset_bottom = 39.0
focus_mode = 0
text = "Change"

[node name="left_bind" type="Label" parent="Ustawienia/Controls"]
layout_mode = 0
offset_left = 104.0
offset_top = 208.0
offset_right = 160.0
offset_bottom = 250.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 3
theme_override_constants/shadow_outline_size = 10
theme_override_font_sizes/font_size = 30
text = "Left"
vertical_alignment = 1

[node name="Label_left_bind" type="Label" parent="Ustawienia/Controls/left_bind"]
layout_mode = 0
offset_left = 144.0
offset_top = 8.0
offset_right = 257.0
offset_bottom = 43.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "Move left"

[node name="left_bind_button" type="Button" parent="Ustawienia/Controls/left_bind"]
layout_mode = 0
offset_left = 456.0
offset_top = 8.0
offset_right = 560.0
offset_bottom = 39.0
focus_mode = 0
text = "Change"

[node name="right_bind" type="Label" parent="Ustawienia/Controls"]
layout_mode = 0
offset_left = 104.0
offset_top = 264.0
offset_right = 179.0
offset_bottom = 306.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 3
theme_override_constants/shadow_outline_size = 10
theme_override_font_sizes/font_size = 30
text = "Right"
vertical_alignment = 1

[node name="Label_right_bind" type="Label" parent="Ustawienia/Controls/right_bind"]
layout_mode = 0
offset_left = 144.0
offset_top = 8.0
offset_right = 274.0
offset_bottom = 43.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "Move right"

[node name="right_bind_button" type="Button" parent="Ustawienia/Controls/right_bind"]
layout_mode = 0
offset_left = 456.0
offset_top = 8.0
offset_right = 560.0
offset_bottom = 39.0
focus_mode = 0
text = "Change"

[node name="interaction_bind" type="Label" parent="Ustawienia/Controls"]
layout_mode = 0
offset_left = 104.0
offset_top = 320.0
offset_right = 144.0
offset_bottom = 362.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 3
theme_override_constants/shadow_outline_size = 10
theme_override_font_sizes/font_size = 30
text = "E"
vertical_alignment = 1

[node name="Label_interaction" type="Label" parent="Ustawienia/Controls/interaction_bind"]
layout_mode = 0
offset_left = 144.0
offset_top = 8.0
offset_right = 277.0
offset_bottom = 43.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "Interaction"

[node name="interaction_bind_button" type="Button" parent="Ustawienia/Controls/interaction_bind"]
layout_mode = 0
offset_left = 456.0
offset_top = 8.0
offset_right = 560.0
offset_bottom = 39.0
focus_mode = 0
text = "Change"

[node name="Line2D" type="Line2D" parent="Ustawienia/Controls"]
position = Vector2(235, 96)
points = PackedVector2Array(0, 0, 0, 308)
width = 5.0
default_color = Color(0, 0, 0, 1)

[node name="change_bind" type="ColorRect" parent="Ustawienia/Controls"]
visible = false
layout_mode = 0
offset_left = 192.0
offset_top = 112.0
offset_right = 576.0
offset_bottom = 352.0
color = Color(0, 0, 0, 0.784314)

[node name="Label" type="Label" parent="Ustawienia/Controls/change_bind"]
layout_mode = 0
offset_left = 24.0
offset_top = 24.0
offset_right = 360.0
offset_bottom = 111.0
theme_override_colors/font_shadow_color = Color(0.712129, 0.712129, 0.712129, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "Press a new key for move up action"
autowrap_mode = 2

[node name="close_button" type="Button" parent="Ustawienia"]
layout_mode = 0
offset_left = 320.0
offset_top = 368.0
offset_right = 448.0
offset_bottom = 408.0
focus_mode = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 23
text = "Close"
flat = true

[node name="settings_button" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 688.0
offset_top = 16.0
offset_right = 749.0
offset_bottom = 77.0
focus_mode = 0
texture_normal = ExtResource("3_4bgjp")

[node name="pause_button" type="TextureButton" parent="."]
visible = false
layout_mode = 0
offset_left = 688.0
offset_top = 16.0
offset_right = 748.0
offset_bottom = 76.0
focus_mode = 0
texture_normal = ExtResource("4_tequf")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.5, 1.5)
limit_left = 0
limit_top = 0
limit_right = 768
limit_bottom = 432

[node name="wroc" type="TextureButton" parent="."]
visible = false
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 56.0
offset_bottom = 56.0
texture_normal = ExtResource("5_s1ai8")
texture_pressed = ExtResource("5_s1ai8")
texture_hover = ExtResource("5_s1ai8")
texture_disabled = ExtResource("5_s1ai8")
texture_focused = ExtResource("5_s1ai8")

[connection signal="pressed" from="menu_start/przycisk_start" to="." method="_on_przycisk_start_pressed"]
[connection signal="visibility_changed" from="menu_levels" to="." method="_on_menu_levels_visibility_changed"]
[connection signal="pressed" from="menu_levels/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="menu_levels/PanelContainer1/TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="menu_levels/PanelContainer2/TextureButton" to="." method="_on_texture_button_pressed2"]
[connection signal="pressed" from="menu_levels/PanelContainer3/TextureButton" to="." method="_on_texture_button_pressed3"]
[connection signal="pressed" from="menu_levels/PanelContainer4/TextureButton" to="." method="_on_texture_button_pressed4"]
[connection signal="pressed" from="menu_levels/PanelContainer5/TextureButton" to="." method="_on_texture_button_pressed5"]
[connection signal="pressed" from="menu_levels/back_start_button" to="." method="_on_back_start_button_pressed"]
[connection signal="pressed" from="Ustawienia/settings_button2" to="." method="_on_settings_button_2_pressed"]
[connection signal="pressed" from="Ustawienia/contols_button" to="." method="_on_contols_button_pressed"]
[connection signal="value_changed" from="Ustawienia/Settings/music_slider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="Ustawienia/Settings/sfx_slider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="pressed" from="Ustawienia/Controls/up_bind/up_bind_button" to="." method="_on_up_bind_button_pressed"]
[connection signal="pressed" from="Ustawienia/Controls/down_bind/down_bind_button" to="." method="_on_down_bind_button_pressed"]
[connection signal="pressed" from="Ustawienia/Controls/left_bind/left_bind_button" to="." method="_on_left_bind_button_pressed"]
[connection signal="pressed" from="Ustawienia/Controls/right_bind/right_bind_button" to="." method="_on_right_bind_button_pressed"]
[connection signal="pressed" from="Ustawienia/Controls/interaction_bind/interaction_bind_button" to="." method="_on_interaction_bind_button_pressed"]
[connection signal="pressed" from="Ustawienia/close_button" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="settings_button" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="wroc" to="." method="_on_wroc_pressed"]
